Fixed the toolbar overlapping header issue and made the view wrap to the window only, as well as a few styling issues

--- a/public/js/admin/tempAdminStyles.css
+++ b/public/js/admin/tempAdminStyles.css
@@ -6,19 +6,18 @@
 	font-size: smaller;
 }
 
+.relative {
+	position: relative;
+}
+
 
 .active-tab {
 	background-color: #D8E8FF;
 	color: black !important;
 }
 
-.active-tab:hover {
+.active-tab:hover, .active-tab:focus {
 	background-color: #BCCADE !important;
-}
-
-
-.sidenav-toolbar {
-	background-color: #2F3F42;
 }
 
 .sidenav-toolbar .toolbar-button, #toggle-menu-button {
@@ -36,12 +35,14 @@
 }
 
 .sidenav-toolbar {
-	position: absolute;
+	/*position: absolute;
 	left: 0;
-	top: 0;
+	top: 0;*/
 	
 	height: 100%;
 	width: 200px;
+	
+	background-color: #2F3F42;
 	
 	transition: all linear .3s;
 }
